--- a/style.css
+++ b/style.css
@@ -1,12 +1,28 @@
 *{
-  text-align: center;
   font-family: 'Merriweather', sans-serif;
-  padding: 0px;
-  margin:0px;
 }
-
+a{
+  color: #444444;
+  text-decoration: none;
+  padding-left:180px;
+}
+a:hover{
+  text-decoration: underline;
+  color: white;
+}
+.Footer{
+  width: 100%;
+  height: 10px;
+  position: fixed;
+  bottom:0;
+  right:0;
+  overflow-y: hidden;
+  padding:30px;
+  background: #1f1f1f;
+}
 .button{
   background-color: white;
+  text-align: center;
   padding: 10px;
   margin: 30px;
   font-size: 20px;
@@ -26,7 +42,9 @@
 
   /* text-decoration: underline; */
   color: white;
-  padding: 10px;
+  padding: 0px;
+  margin: 0px;
+  z-index: 100;
 }
 
 p{
@@ -34,6 +52,7 @@ p{
   line-height: 1.4;
   padding: 10px;
   font-size: 20px;
+  text-align: center;
 }
 
 h2{
@@ -42,6 +61,9 @@ h2{
 }
 
 body{
+  padding: 0px;
+  margin:0px;
   background-color: #1c1c1c;
   color: #FFFFFF;
+  text-align: center;
 }
